--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "copy-webpack-plugin": "^4.3.1",
     "vue": "^2.5.3",
     "vuetify": "^0.17.4"
   },
