--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "copy-webpack-plugin": "^4.3.1",
     "vue": "^2.5.3",
-    "vuetify": "^0.17.4"
+    "vuetify": "^0.17.4",
+    "zip-webpack-plugin": "^2.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
